--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+MS_TENANT_ID= 41574e53-8bd9-457f-a3bc-18f7c9153324
+MS_CLIENT_ID= b31edbdd-6825-4485-8ae1-bd5ec580b97e
+MS_CLIENT_SECRET= 5271980f-0d7e-40e3-8b71-584a039d3e98
+MS_CLIENT_SECRET_VALUE= RTh8Q~YoiPCVWsmaUSkBbe-rL4rTG28Q3InK2dnD
+MS_GRAPH_API_VERSION=v1.0
